syntax = "proto3";

package tutorial;

option java_package = "selector.proto.output";
option java_outer_classname = "SchemaProtos";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
  string GEndER = 5;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

// This is my table
message Schema {
  repeated Person people = 1;
}
